--- a/docker/docker-compose.dev.yml
+++ b/docker/docker-compose.dev.yml
@@ -1,5 +1,5 @@
 ---
-version: "2"
+version: "2.4"
 
 volumes:
   elasticsearch_data:
@@ -22,14 +22,27 @@ services:
       - ..:/atom/src:rw
       - "dip_uploads_data:/var/archivematica/dip-uploads:rw"
       - "archivematica_pipeline_data:/var/archivematica/sharedDirectory:rw"
+    depends_on:
+      percona:
+        condition: service_healthy
+      elasticsearch:
+        condition: service_healthy
+      memcached:
+        condition: service_started
+      gearmand:
+        condition: service_started
 
   atom_worker:
     build: ..
     command: worker
     env_file: etc/environment
     depends_on:
-      - gearmand
-      - percona
+      percona:
+        condition: service_healthy
+      elasticsearch:
+        condition: service_healthy
+      gearmand:
+        condition: service_started  
     restart: on-failure:5
     volumes:
       - composer_deps:/atom/src/vendor/composer
@@ -56,6 +69,12 @@ services:
       - elasticsearch_data:/usr/share/elasticsearch/data
     ports:
       - "127.0.0.1:63002:9200"
+    healthcheck:
+      test: ["CMD-SHELL", "curl --silent --fail localhost:9200/_cluster/health || exit 1"]
+      interval: 30s
+      timeout: 30s
+      retries: 3
+      start_period: 30s
 
   percona:
     image: percona:8.0
@@ -65,6 +84,12 @@ services:
       - ./etc/mysql/mysqld.cnf:/etc/my.cnf.d/mysqld.cnf:ro
     ports:
       - "127.0.0.1:63003:3306"
+    healthcheck:
+      test: ["CMD-SHELL", "mysqladmin -h 'localhost' -u root -pmy-secret-pw ping --silent"]
+      interval: 30s
+      timeout: 30s
+      retries: 3
+      start_period: 30s
 
   memcached:
     image: memcached
