--- a/docker/docker-compose.dev.yml
+++ b/docker/docker-compose.dev.yml
@@ -31,6 +31,7 @@ services:
         condition: service_started
       gearmand:
         condition: service_started
+    restart: unless-stopped
 
   atom_worker:
     build: ..
@@ -43,7 +44,7 @@ services:
         condition: service_healthy
       gearmand:
         condition: service_started  
-    restart: on-failure:5
+    restart: unless-stopped
     volumes:
       - composer_deps:/atom/src/vendor/composer
       - ..:/atom/src:rw
@@ -57,6 +58,7 @@ services:
       - ./etc/nginx/nginx.conf:/etc/nginx/nginx.conf:ro
     ports:
       - "63001:80"
+    restart: unless-stopped
 
   elasticsearch:
     image: docker.elastic.co/elasticsearch/elasticsearch:5.6.16
@@ -101,3 +103,4 @@ services:
     image: artefactual/gearmand
     ports:
       - "127.0.0.1:63005:4730"
+
