--- a/docker/docker-compose.dev.yml
+++ b/docker/docker-compose.dev.yml
@@ -8,19 +8,16 @@ volumes:
   dip_uploads_data:
     external:
       name: "dip-upload-data"
-  archivematica_pipeline_data:
-    external:
-      name: "am-pipeline-data"
 
 services:
 
   atom:
     build: ..
+    container_name: atom
     image: ${DOCKER_REGISTRY:?registry}/atom:latest
     env_file: etc/environment
     volumes:
       - "dip_uploads_data:/var/archivematica/dip-uploads:rw"
-      - "archivematica_pipeline_data:/var/archivematica/sharedDirectory:rw"
     depends_on:
       percona:
         condition: service_healthy
@@ -34,6 +31,7 @@ services:
 
   atom_worker:
     build: ..
+    container_name: atom_worker
     image: ${DOCKER_REGISTRY:?registry}/atom-worker:latest
     command: worker
     env_file: etc/environment
@@ -47,19 +45,22 @@ services:
     restart: unless-stopped
     volumes:
       - "dip_uploads_data:/var/archivematica/dip-uploads:rw"
-      - "archivematica_pipeline_data:/var/archivematica/sharedDirectory:rw"
 
   nginx:
     image: nginx:latest
+    container_name: atom_nginx
     volumes:
       - ..:/atom/src:ro
       - ./etc/nginx/nginx.conf:/etc/nginx/nginx.conf:ro
+    depends_on: 
+      - atom      
     ports:
       - "63001:80"
     restart: unless-stopped
 
-  elasticsearch:
+  elasticsearch: 
     image: docker.elastic.co/elasticsearch/elasticsearch:5.6.16
+    container_name: atom_elasticsearch
     env_file: etc/environment
     ulimits:
       memlock:
@@ -78,6 +79,7 @@ services:
 
   percona:
     image: percona:8.0
+    container_name: atom_percona
     env_file: etc/environment
     volumes:
       - percona_data:/var/lib/mysql:rw
@@ -93,12 +95,14 @@ services:
 
   memcached:
     image: memcached
+    container_name: atom_memcached
     command: -p 11211 -m 128 -u memcache
     ports:
       - "127.0.0.1:63004:11211"
 
   gearmand:
     image: artefactual/gearmand
+    container_name: atom_gearmand
     ports:
       - "127.0.0.1:63005:4730"
 
