--- a/docker/docker-compose.dev.yml
+++ b/docker/docker-compose.dev.yml
@@ -47,11 +47,11 @@ services:
       - "dip_uploads_data:/var/archivematica/dip-uploads:rw"
 
   nginx:
-    image: nginx:latest
+    build: 
+      dockerfile: docker/etc/nginx/Dockerfile    
+      context: ../
+    image: ${DOCKER_REGISTRY:?registry}/atom_nginx:latest
     container_name: atom_nginx
-    volumes:
-      - ..:/atom/src:ro
-      - ./etc/nginx/nginx.conf:/etc/nginx/nginx.conf:ro
     depends_on: 
       - atom      
     ports:
