--- a/docker/etc/nginx/Dockerfile
+++ b/docker/etc/nginx/Dockerfile
@@ -2,4 +2,4 @@ FROM nginx:latest
 
 WORKDIR ../../../
 COPY . /atom/src
-COPY docker/etc/nginx/nginx.conf /etc/nginx/nginx.conf:ro
+COPY docker/etc/nginx/nginx.conf /etc/nginx/nginx.conf
