--- a/docker/docker-compose.dev.yml
+++ b/docker/docker-compose.dev.yml
@@ -31,7 +31,7 @@ services:
 
   atom_worker:
     build: ..
-    container_name: atom_worker
+    container_name: atom-worker
     image: ${DOCKER_REGISTRY:?registry}/atom-worker:latest
     command: worker
     env_file: etc/environment
@@ -50,7 +50,7 @@ services:
     build: 
       dockerfile: docker/etc/nginx/Dockerfile    
       context: ../
-    image: ${DOCKER_REGISTRY:?registry}/atom_nginx:latest
+    image: ${DOCKER_REGISTRY:?registry}/atom-nginx:latest
     container_name: atom_nginx
     depends_on: 
       - atom      
@@ -79,7 +79,7 @@ services:
 
   percona:
     image: percona:8.0
-    container_name: atom_percona
+    container_name: atom-percona
     env_file: etc/environment
     volumes:
       - percona_data:/var/lib/mysql:rw
@@ -95,14 +95,14 @@ services:
 
   memcached:
     image: memcached
-    container_name: atom_memcached
+    container_name: atom-memcached
     command: -p 11211 -m 128 -u memcache
     ports:
       - "127.0.0.1:63004:11211"
 
   gearmand:
     image: artefactual/gearmand
-    container_name: atom_gearmand
+    container_name: atom-gearmand
     ports:
       - "127.0.0.1:63005:4730"
 
