--- a/docker/docker-compose.dev.yml
+++ b/docker/docker-compose.dev.yml
@@ -51,7 +51,7 @@ services:
       dockerfile: docker/etc/nginx/Dockerfile    
       context: ../
     image: ${DOCKER_REGISTRY:?registry}/atom-nginx:latest
-    container_name: atom_nginx
+    container_name: atom-nginx
     depends_on: 
       - atom      
     ports:
@@ -60,7 +60,7 @@ services:
 
   elasticsearch: 
     image: docker.elastic.co/elasticsearch/elasticsearch:5.6.16
-    container_name: atom_elasticsearch
+    container_name: atom-elasticsearch
     env_file: etc/environment
     ulimits:
       memlock:
