--- a/docker/etc/nginx/Dockerfile
+++ b/docker/etc/nginx/Dockerfile
@@ -1,5 +1,5 @@
 FROM nginx:latest
 
 WORKDIR ../../../
-COPY . /atom/src
+COPY --from=registry.tre-pe.gov.br/sesel/atom /atom/src /atom/src
 COPY docker/etc/nginx/nginx.conf /etc/nginx/nginx.conf
