--- a/docker/docker-compose.dev.yml
+++ b/docker/docker-compose.dev.yml
@@ -5,9 +5,10 @@ volumes:
   elasticsearch_data:
   percona_data:
   composer_deps:
+  atom_uploads_data:
   dip_uploads_data:
     external:
-      name: "dip-upload-data"
+      name: "dip-upload-data"  
 
 services:
 
@@ -18,6 +19,7 @@ services:
     env_file: etc/environment
     volumes:
       - "dip_uploads_data:/var/archivematica/dip-uploads:rw"
+      - "atom_uploads_data:/atom/src/uploads:rw"
     depends_on:
       percona:
         condition: service_healthy
@@ -45,6 +47,7 @@ services:
     restart: unless-stopped
     volumes:
       - "dip_uploads_data:/var/archivematica/dip-uploads:rw"
+      - "atom_uploads_data:/atom/src/uploads:rw"
 
   nginx:
     build: 
@@ -54,6 +57,8 @@ services:
     container_name: atom-nginx
     depends_on: 
       - atom      
+    volumes:
+      - "atom_uploads_data:/atom/src/uploads:ro"
     ports:
       - "63001:80"
     restart: unless-stopped
