--- a/docker/docker-compose.dev.yml
+++ b/docker/docker-compose.dev.yml
@@ -104,10 +104,12 @@ services:
     command: -p 11211 -m 128 -u memcache
     ports:
       - "127.0.0.1:63004:11211"
+    restart: unless-stopped
 
   gearmand:
     image: artefactual/gearmand
     container_name: atom-gearmand
     ports:
       - "127.0.0.1:63005:4730"
+    restart: unless-stopped
 
